--- a/templates/users/fragments/user_table.html
+++ b/templates/users/fragments/user_table.html
@@ -1,4 +1,4 @@
-<div id="user-content" class="card-content card-color">
+<div id="user-table" class="card-content card-color">
     <br>
     <table class="striped highlight responsive-table">
         <thead class="header-color white-text">
