--- a/templates/qualifications/qualification_list.html
+++ b/templates/qualifications/qualification_list.html
@@ -3,55 +3,37 @@
 
 {% block content %}
     {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Qualifications</h3>
-        {% if user.is_admin %}<a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_qualification' %}"><i class="material-icons left">add</i>Create qualification</a><br><br>{% endif %}
-        <div class="card">
-            <div class="card-content">
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Important</th>
-                            <th>Associated Departments</th>
-                            <th>Associated Employees</th>
-                            <th>View</th>
-                            {% if user.is_admin %}
-                                <th>Edit</th>
-                            {% endif %}
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in all_entries %}
-                        <tr>
-                            <td>{{ entry.name }}</td>
-                            <td>{{ entry.description }}</td>
-                            <td>
-                                {% if entry.is_important %}
-                                    <i class="material-icons light-green-text text-darken-1">done</i>
-                                {% else %}
-                                    <i class="material-icons red-text text-darken-1">close</i>
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if entry.departments.count > 0 %}{{ entry.departments.count }}{% endif %}
-                            </td>
-                            <td>
-                                {% if entry.employees.count > 0 %}{{ entry.employees.count }}{% endif %}
-                            </td>
-                            <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'view_qualification' entry.id %}"><i class="material-icons">search</i></a>
-                            </td>
-                            {% if user.is_admin %}
-                                <td>
-                                    <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_qualification' entry.id %}"><i class="material-icons">edit</i></a>
-                                </td>
-                            {% endif %}
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+        <br><br><br>
+        <div id="add-modal" class="modal">
+            <div id="add-modal-content"></div>
+        </div>
+        <div id="edit-modal" class="modal">
+            <div id="edit-modal-content"></div>
+        </div>
+        <div id="details-modal" class="modal">
+            <div id="details-modal-content"></div>
+        </div>
+
+        <div id="qualification-content">
+            <form hx-post="{% url 'qualifications' %}" hx-target="#qualifications-table" hx-swap="morph">
+                {% csrf_token %}
+                <div class="card card-color">
+                    <div class="card-content header-color">
+                        <div class="row" style="gap: 1em">
+                            <div class="s8 card-title"><b class="accent-color-text"><i class="material-icons left">label</i>Qualifications</b></div>
+                            <div class="s4 m4 input-field">
+                                <i class="material-icons prefix">search</i>
+                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'qualifications' %}" hx-trigger="keyup delay:250ms" hx-target="#qualifications-table" hx-swap="morph">
+                                <label for="id_keyword">Keyword</label>
+                            </div>
+                        </div>
+                        <div id="loader" hx-post="{% url 'qualifications' %}" hx-trigger="load once" hx-target="#qualifications-table" hx-swap="morph"></div>
+                        <br>
+                        {% if user.is_admin %}<a class="modal-trigger btn-floating accent-color white-text right" data-target="add-modal" hx-get="{% url 'create_qualification' %}" hx-target="#add-modal" hx-swap="morph"><i class="material-icons left">add</i></a>{% endif %}
+                    </div>
+                    <div id="qualifications-table"></div>
+                </div><br>
+            </form>
         </div>
     {% else %}
         {% include 'forbidden.html' %}
