--- a/templates/qualifications/fragments/qualification_table.html
+++ b/templates/qualifications/fragments/qualification_table.html
@@ -1,4 +1,4 @@
-<div id="qualifications-table" class="card-content card-color">
+<div id="qualification-table" class="card-content card-color">
     <br>
     <table class="striped highlight responsive-table">
         <thead class="header-color white-text">
@@ -14,15 +14,13 @@
         </tr>
         </thead>
         <tbody>
-        {% for entry in entries %}
+        {% for entry in page_obj %}
             <tr>
                 <td><b>{{ entry.name }}</b></td>
                 <td>{{ entry.description }}</td>
                 <td>
                     {% if entry.is_important %}
                         <i class="material-icons light-green-text text-darken-1">done</i>
-                    {% else %}
-                        <i class="material-icons red-text text-darken-1">close</i>
                     {% endif %}
                 </td>
                 <td>
@@ -39,5 +37,26 @@
             </tr>
         {% endfor %}
         </tbody>
-    </table>
+    </table><br>
+
+    <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries.count }} entries)</span>
+    <ul class="pagination center">
+        {% if page_obj.has_previous %}
+            <li class="waves-effect"><a hx-post="{% url 'qualifications' %}?page={{ page_obj.previous_page_number }}" hx-target="#qualification-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
+        {% else %}
+            <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_left</i></a></li>
+        {% endif %}
+        {% for page in page_obj.paginator.page_range %}
+            {% if page == page_obj.number %}
+                <li class="active accent-color"><a>{{ page_obj.number }}</a></li>
+            {% else %}
+                <li class="waves-effect"><a hx-post="{% url 'qualifications' %}?page={{ page }}" hx-target="#qualification-table" hx-swap="morph">{{ page }}</a></li>
+            {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+            <li class="waves-effect"><a hx-post="{% url 'qualifications' %}?page={{ page_obj.next_page_number }}" hx-target="#qualification-table" hx-swap="morph"><i class="material-icons">chevron_right</i></a></li>
+        {% else %}
+            <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
+        {% endif %}
+    </ul>
 </div>
