--- a/templates/departments/department_list.html
+++ b/templates/departments/department_list.html
@@ -3,72 +3,37 @@
 
 {% block content %}
     {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Departments</h3>
-        {% if user.is_admin %}<a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_department' %}"><i class="material-icons left">add</i>Create department</a><br><br>{% endif %}
-        <div class="card">
-            <div class="card-content">
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Qualifications</th>
-                            <th>Employees</th>
-                            <th>Work hours</th>
-                            <th>View</th>
-                            {% if user.is_admin %}<th>Edit</th>{% endif %}
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in all_entries %}
-                        <tr>
-                            <td>{{ entry.name }}</td>
-                            <td>{{ entry.description }}</td>
-                            <td>
-                                {% for qualification in entry.qualifications %}
-                                    <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
-                                        <b>{{ qualification.qualification.name }}</b>
-                                    </span>
-                                {% endfor %}
-                            </td>
-                            <td>
-                                {% if entry.get_employees.count == 0 %}
-                                    <span></span>
-                                {% else %}
-                                    {{ entry.get_employees.count }}
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if entry.get_employees.count == 0 %}
-                                    <span></span>
-                                {% else %}
-                                    {% if entry.get_work_hours > 0 %}
-                                        {{ entry.get_work_hours }} hours / week
-                                    {% endif %}
-                                {% endif %}
-                            </td>
-                            <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'view_department' entry.id %}"><i class="material-icons">search</i></a>
-                            </td>
-                            {% if user.is_admin %}
-                                <td>
-                                    <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_department' entry.id %}"><i class="material-icons">edit</i></a>
-                                </td>
-                            {% endif %}
-                        </tr>
-                        {% endfor %}
-                        <tr class="grey darken-1 white-text">
-                            <td><b>Total</b><br>{{ all_entries.count }} departments</td>
-                            <td></td>
-                            <td></td>
-                            <td>{{ employee_count }}</td>
-                            <td>{{ work_hours }} hours / week</td>
-                            <td></td>
-                            {% if user.is_admin %}<td></td>{% endif %}
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <br><br><br>
+        <div id="add-modal" class="modal">
+            <div id="add-modal-content"></div>
+        </div>
+        <div id="edit-modal" class="modal">
+            <div id="edit-modal-content"></div>
+        </div>
+        <div id="details-modal" class="modal">
+            <div id="details-modal-content"></div>
+        </div>
+
+        <div id="departments-content">
+            <form hx-post="{% url 'departments' %}" hx-target="#department-table" hx-swap="morph">
+                {% csrf_token %}
+                <div class="card card-color">
+                    <div class="card-content header-color">
+                        <div class="row" style="gap: 1em">
+                            <div class="s8 card-title"><b class="accent-color-text"><i class="material-icons left">view_list</i>Departments</b></div>
+                            <div class="s4 m4 input-field">
+                                <i class="material-icons prefix">search</i>
+                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'departments' %}" hx-trigger="keyup delay:250ms" hx-target="#department-table" hx-swap="morph">
+                                <label for="id_keyword">Keyword</label>
+                            </div>
+                        </div>
+                        <div id="loader" hx-post="{% url 'departments' %}" hx-trigger="load once" hx-target="#department-table" hx-swap="morph"></div>
+                        <br>
+                        {% if user.is_admin %}<a class="modal-trigger btn-floating accent-color white-text right" data-target="add-modal" hx-get="{% url 'create_department' %}" hx-target="#add-modal" hx-swap="morph"><i class="material-icons left">add</i></a>{% endif %}
+                    </div>
+                    <div id="department-table"></div>
+                </div><br>
+            </form>
         </div>
     {% else %}
         {% include 'forbidden.html' %}
