--- a/templates/qualifications/fragments/edit_qualification.html
+++ b/templates/qualifications/fragments/edit_qualification.html
@@ -11,13 +11,13 @@
         </div>
         <div class="modal-footer header-color">
             <a class="modal-close waves-effect waves-light btn-flat white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">close</i>Abort and close</a>
-            <a class="waves-effect waves-light btn warning-color white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();" hx-get="{% url 'delete_qualification' selected_qualification.id %}" hx-target="#qualifications-table" hx-swap="morph"><i class="material-icons left">delete_forever</i>Yes, delete</a>
+            <a class="waves-effect waves-light btn warning-color white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();" hx-get="{% url 'delete_qualification' selected_qualification.id %}" hx-target="#qualification-table" hx-swap="morph"><i class="material-icons left">delete_forever</i>Yes, delete</a>
         </div>
     </div>
 
-    <form hx-post="{% url 'edit_qualification' selected_qualification.id %}" hx-target="#qualifications-table" hx-swap="morph">
+    <form hx-post="{% url 'edit_qualification' selected_qualification.id %}" hx-target="#qualification-table" hx-swap="morph">
         <div class="modal-content card-color">
-            <h5 class="header-color-text"><b>Create qualification</b></h5>
+            <h5 class="header-color-text"><b>Edit {{ selected_qualification }}</b></h5>
             {% csrf_token %}
             <div class="row" style="gap: 1em">
                 <div class="s4 input-field">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="modal-footer header-color" style="margin-top: 10%">
-            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">edit</i>Update qualification</button>
+            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">edit</i>Update Qualification</button>
             <a class="modal-trigger waves-effect waves-light btn-flat white-text" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
         </div>
     </form>
