--- a/templates/qualifications/qualification_list.html
+++ b/templates/qualifications/qualification_list.html
@@ -15,7 +15,7 @@
         </div>
 
         <div id="qualification-content">
-            <form hx-post="{% url 'qualifications' %}" hx-target="#qualifications-table" hx-swap="morph">
+            <form hx-post="{% url 'qualifications' %}" hx-target="#qualification-table" hx-swap="morph">
                 {% csrf_token %}
                 <div class="card card-color">
                     <div class="card-content header-color">
@@ -23,15 +23,15 @@
                             <div class="s8 card-title"><b class="accent-color-text"><i class="material-icons left">label</i>Qualifications</b></div>
                             <div class="s4 m4 input-field">
                                 <i class="material-icons prefix">search</i>
-                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'qualifications' %}" hx-trigger="keyup delay:250ms" hx-target="#qualifications-table" hx-swap="morph">
+                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'qualifications' %}" hx-trigger="keyup delay:250ms" hx-target="#qualification-table" hx-swap="morph">
                                 <label for="id_keyword">Keyword</label>
                             </div>
                         </div>
-                        <div id="loader" hx-post="{% url 'qualifications' %}" hx-trigger="load once" hx-target="#qualifications-table" hx-swap="morph"></div>
+                        <div id="loader" hx-post="{% url 'qualifications' %}" hx-trigger="load once" hx-target="#qualification-table" hx-swap="morph"></div>
                         <br>
                         {% if user.is_admin %}<a class="modal-trigger btn-floating accent-color white-text right" data-target="add-modal" hx-get="{% url 'create_qualification' %}" hx-target="#add-modal" hx-swap="morph"><i class="material-icons left">add</i></a>{% endif %}
                     </div>
-                    <div id="qualifications-table"></div>
+                    <div id="qualification-table"></div>
                 </div><br>
             </form>
         </div>
