--- a/templates/demand/demand_list.html
+++ b/templates/demand/demand_list.html
@@ -3,99 +3,47 @@
 
 {% block content %}
     {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Demand</h3>
-        <ul class="collapsible">
-            <li>
-                <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
-                <div class="collapsible-body grey lighten-5">
-                    <form method="POST" action="{% url 'demand' %}">
-                        {% csrf_token %}
-                        <div class="row">
-                            <div class="input-field col s12 m6">
-                                <i class="material-icons prefix">local_offer</i>
-                                <select name="department">
-                                    {% for department in departments %}
-                                        <option value="{{ department.id }}" {% if data.department == department.id %}selected{% endif %}>{{ department.name }}</option>
-                                    {% endfor %}
-                                </select>
-                                <label>Department</label>
-                            </div>
-                            <div class="input-field col s12 m6">
-                                <i class="material-icons prefix">local_offer</i>
-                                <select name="weekday">
-                                    {% for weekday in form.weekday %}
-                                        <option value="{{ weekday.data.value }}" {% if data.weekday == weekday.data.value %}selected{% endif %}>{{ weekday.data.label }}</option>
-                                    {% endfor %}
-                                </select>
-                                <label>Weekday</label>
-                            </div>
-                        </div>
-                        <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">search</i>Search</button>
-                        {% if search %}
-                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'demand' %}"><i class="material-icons left">clear</i>Clear</a>
-                        {% endif %}
-                    </form>
+        <div id="add-modal" class="modal">
+            <div id="add-modal-content"></div>
+        </div>
+        <div id="edit-modal" class="modal">
+            <div id="edit-modal-content"></div>
+        </div>
+        <br><br><br>
+        <div class="card card-color">
+            <form>
+                {% csrf_token %}
+                <div class="card-content header-color">
+                    <div class="row" style="gap: 1em">
+                    <div class="s4 card-title"><b class="accent-color-text"><i class="material-icons left">date_range</i>Demand</b></div>
+                    <div class="s4 input-field">
+                        <i class="material-icons prefix">event</i>
+                        <select name="weekday" hx-post="{% url 'demand' %}" hx-trigger="change" hx-target="#demand-table" hx-swap="morph">
+                            <option value="0">All weekdays</option>
+                            {% for weekday in form.weekday %}
+                                <option value="{{ weekday.data.value }}" {% if selected_demand.weekday == weekday.data.value %}selected{% endif %}>{{ weekday.data.label }}</option>
+                            {% endfor %}
+                        </select>
+                        <label>Weekday</label>
+                    </div>
+                    <div class="s4 input-field">
+                        <i class="material-icons prefix">local_offer</i>
+                        <select name="department" hx-post="{% url 'demand' %}" hx-trigger="change" hx-target="#demand-table" hx-swap="morph">
+                            <option value="0">All departments</option>
+                            {% for entry in departments %}
+                                <option value="{{ entry.id }}" {% if entry.id == department.id %}selected{% endif %}>{{ entry }}</option>
+                            {% endfor %}
+                        </select>
+                        <label>Department</label>
+                    </div>
                 </div>
-            </li>
-        </ul>
-
-        <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_demand' %}"><i class="material-icons left">add</i>Create demand</a><br><br>
-        <div class="card">
-            <div class="card-content">
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Department</th>
-                            <th>Weekday</th>
-                            <th>Start</th>
-                            <th>End</th>
-                            <th>Staff count</th>
-                            <th>Note</th>
-                            <th>Edit</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in page_obj %}
-                        <tr>
-                            <td>{{ entry.department }}</td>
-                            <td>{{ entry.get_weekday_display }}</td>
-                            <td>{{ entry.start_time|date:"H:i" }}</td>
-                            <td>{{ entry.end_time|date:"H:i" }}</td>
-                            <td>{{ entry.staff_count }}</td>
-                            <td>{{ entry.note }}</td>
-                            <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_demand' entry.id %}"><i class="material-icons">edit</i></a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                {% if search %}
-                    <img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
-                {% endif %}
-            </div>
+                    <div id="loader" hx-post="{% url 'demand' %}" hx-trigger="load once" hx-target="#demand-table" hx-swap="morph"></div><br>
+                    <a class="modal-trigger btn-floating accent-color white-text right" data-target="add-modal" hx-get="{% url 'create_demand' %}" hx-target="#add-modal-content" hx-swap="morph"><i class="material-icons left">add</i></a>
+                </div>
+                <div id="demand-table" class="card-content card-color"></div>
+            </form>
         </div>
 
-        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
-        <ul class="pagination center">
-            {% if page_obj.has_previous %}
-                <li class="waves-effect"><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
-            {% else %}
-                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_left</i></a></li>
-            {% endif %}
-            {% for page in page_obj.paginator.page_range %}
-                {% if page == page_obj.number %}
-                    <li class="active light-blue darken-1"><a>{{ page_obj.number }}</a></li>
-                {% else %}
-                    <li class="waves-effect"><a href="?page={{ page }}">{{ page }}</a></li>
-                {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-                <li class="waves-effect"><a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
-            {% else %}
-                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
-            {% endif %}
-        </ul>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
