--- a/templates/shifts/fragments/shiftplan-display.html
+++ b/templates/shifts/fragments/shiftplan-display.html
@@ -1,5 +1,5 @@
 <div id="shiftplan-display">
     {% if search == True and data != None %}
-        <img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+        <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
     {% endif %}
 </div>
